# mahjong-cpp

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
data/: test_daisusi.txt  test_suanko.txt  test_suanko_tanki (1).txt  test_syosusi.txt  test_tyurenpoto.txt  zihai_table.txt
data/config/: honors_patterns.json  request_schema.json  response_schema.json  suits_patterns.json  uradora.txt  zihai_table.txt
data/testcase/: test_daisangen.txt  test_expected_calclation_input.json  test_expected_calclation_output.json  test_kokusi13.txt  test_ryuiso.txt  test_score_calculator_all_green.txt  test_score_calculator_big_four_winds.txt  test_score_calculator_four_concealed_triplets.txt  test_score_calculator_nine_gates.txt  test_score_calculator_single_wait_four_concealed_triplets.txt  test_score_calculator_thirteen_wait_thirteen_orphans.txt  test_score_daisangen.txt  test_score_suanko.txt  test_score_syosusi.txt  test_score_tuiso.txt  test_score_tyurenpoto9.txt  test_suanko_tanki.txt  test_syanten.txt  test_tuiso.txt  test_tyurenpoto9.txt  test_unnecessary_tile_calculator.txt  test_unnecessary_tile_selector.txt  testcase_add_tile.json  testcase_hand_constractor.txt  testcase_hand_num_tiles.txt  testcase_hand_to_string.txt  testcase_remove_tile.json
data/testcase/requests/: 1112234r5667p4r55s.json  11237m4589p23345s.json  11345m234566777s.json  115678m2666p3688s.json  116m1235678p1267s.json  12224568m3667p89s.json  122334r567m456p45s.json  12234556m789p344s.json  122667m23668p789s.json  12345678m6678p78s.json  12355699m34678p西.json  123m1234789p3388s.json  123m1235678p17s中中.json  123m3335777p234r5s.json  123mr567789p22223s.json  123mr56799p222344s.json  123mr56799p234556s.json  123mr567p23345567s.json  12678m2345p468s西西.json  1278m2347p116789s.json  13456789m56p5557s.json  1356678m13345p發發.json  1389m224566p4567s.json  139m34r55789p6789s.json  14789p1234789s東東.json  1m4r5679p224r56s白白白.json  222567m34p33667s北.json  2226689m22348p34s.json  223345667m45p24r5s.json  22334r568m3368pr56s.json  2234m34p11233456s.json  2234m45667p56677s.json  223m566p224r55677s.json  224667m34677p234s.json  2246689m789p4578s.json  233456677m23456s.json  233678m2334r5667s.json  233788mr55667p678s.json  234455m22678p45s北.json  23445m3456p44566s.json  (+41 more)
data/testcase/responses/: 1112234r5667p4r55s.json  11345m234566777s.json  (+79 more)
docs/: expected_score_calculation.md  hand_representations.md  tenhou_mjlog.md  uradora_expected_value.md  words.md  リクエスト・レスポンスデータの仕様.ipynb
misc/shanten_table/: create_distance_table.cpp
python_sample/: Usage.md  mahjong.py  sample.py
src/: main.cpp
src/core/: bitutils.cpp  bitutils.hpp  blockseparator.cpp  blockseparator.hpp  fuuro.hpp  handseparator.cpp  handseparator.hpp  score.cpp  score.hpp  syanten.cpp  syanten.hpp  tehai.cpp  tehai.hpp  types.cpp  types.hpp  utils.hpp
src/mahjong/: bitutils.hpp  deprecated_expectedvaluecalculator.cpp  deprecated_expectedvaluecalculator.hpp  expectedvaluecalculator.cpp  expectedvaluecalculator.hpp  expectedvaluecalculator2.cpp  expectedvaluecalculator2.hpp  handseparator.cpp  handseparator.hpp  json_parser.cpp  json_parser.hpp  mahjong.hpp  requiredtileselector.cpp  requiredtileselector.hpp  score.cpp  score.hpp  syanten.cpp  syanten.hpp  unnecessarytileselector.cpp  unnecessarytileselector.hpp  utils.hpp
src/misc/shanten_table/: CMakeLists.txt  create_distance_table.cpp  create_uradora_table.cpp  list_hand_and_melds_patterns.cpp
src/samples/: CMakeLists.txt  bench_expected_score.cpp  chk_reddora.cpp  chk_shanten.cpp  create_syanten_table.cpp  create_table.cpp  create_uradora_table.cpp  evaluate_problem_json.cpp  sample_calculate_expexted_value.cpp  sample_calculate_score.cpp  sample_calculate_syanten.cpp  sample_create_hand.cpp  sample_expected_score_calculation.cpp  sample_necessary_tile_calculation.cpp  sample_required_tile_selector.cpp  sample_score_calculation.cpp  sample_shanten_number_calculation.cpp  sample_unnecessary_tile_calculation.cpp  sample_unnecessary_tile_selector.cpp
src/server/: CMakeLists.txt  ThreadPool.hpp  json_parser.cpp  json_parser.hpp  request.json  request_processor.cpp  request_processor.hpp  server.cpp  server.hpp
src/server/client_sample/: client.py  const.py  mahjong.py
src/test/: CMakeLists.txt  naiveexpectedvaluecalculator.cpp  naiveexpectedvaluecalculator.hpp  test_expected_calculator.cpp  test_expected_calculator_validate_result.cpp  test_expected_score_calculator.cpp  test_hand.cpp  test_json_parser.cpp  test_necessary_tile_calculator.cpp  test_player.cpp  test_player_state.cpp  test_required_tile_selector.cpp  test_score.cpp  test_score_pattern_yaku.cpp  test_score_yaku.cpp  test_score_yakuman.cpp  test_server.cpp  test_shanten_calculator.cpp  test_string.cpp  test_syanten.cpp  test_tehai.cpp  test_tile.cpp  test_unnecessary_tile_calculator.cpp  test_unnecessary_tile_selector.cpp
src/test/score_calculator/: test_score_calculator_detail.cpp  test_score_yaku.cpp  test_score_yakuman.cpp
src/test/scripts/: mahjong.py  test_score_daisangen.py  test_score_daisusi.py  test_score_kokusi13.py  test_score_normal_yaku.py  test_score_ryuiso.py  test_score_suanko.py  test_score_suanko_tanki.py  test_score_syosusi.py  test_score_tinroto.py  test_score_tyurenpoto.py  test_score_tyurenpoto9.py  testcase_hand_constractor.py  testcase_hand_num_tiles.py  testcase_hand_to_string.py  utils.py
src/test/testcase_gen/: test_score_daisangen.py  test_score_daisusi.py  test_score_kokusi13.py  test_score_suanko.py  test_score_suanko_tanki.py  test_score_tinroto.py  test_score_tyurenpoto.py  test_score_tyurenpoto9.py  test_unnecessary_tile_selector.py  testcase_addtile_removetile.py  testcase_hand_constractor.py
src/tools/: CMakeLists.txt
src/tools/score_testcase/: CMakeLists.txt  create_score_testdata.cpp  score_testcase_converter.cpp  score_testcase_converter.hpp
src/tools/tenhou/: CMakeLists.txt  mjlog_constants.hpp  mjlog_event_factory.cpp  mjlog_event_factory.hpp  mjlog_parser.cpp  mjlog_parser.hpp  mjlog_types.hpp  replay_builder.cpp  replay_builder.hpp  xml_utils.cpp  xml_utils.hpp
(+59 files in other folders)
